# python-studies

./: README.md  pyproject.toml
notebooks/: csv.ipynb  dictionary.ipynb  tuplas.ipynb
notebooks/parquet/: README.md  RED_.md  _md.md  compression.ipynb  fast_parquet.ipynb  main.py  meu_arquivo.parquet  meu_arquivo_fastparquet.parquet  pandas.ipynb  parquet.ipynb  py_arrow.ipynb  pyarrow.ipynb  red.md  sample.parquet
notebooks/parquet/dataset/: df_pyarrow.parquet  output_com_nova_coluna.parquet  output_valor_alterado.parquet
notebooks/parquet/dataset/compression/: PFW_2021_public_compressao_automatica.parquet  brotli.parquet  gzip.parquet  zstd.parquet
projects/hoymiles/: app.ipynb  app.py  app_3.py  arquivo_2.csv  arquivo_3.csv  data_loader.py  indicators.py  main.ipynb  python-studies.code-workspace  temp.py  visualizations.py
projects/hoymiles/.streamlit/: config.toml
projects/hoymiles/files/energy_ microinversores/: 88659_2024-01-04.csv  88659_2024-01-07.csv  88659_2024-01-11.csv  88659_2024-01-12.csv  88659_2024-01-14.csv  88659_2024-01-18.csv  88659_2024-01-19.csv  88659_2024-01-20.csv  88659_2024-01-21.csv  88659_2024-01-22.csv  88659_2024-01-24.csv  88659_2024-01-25.csv  88659_2024-01-26.csv  88659_2024-01-29.csv  88659_2024-01-31.csv  88659_2024-02-01.csv  88659_2024-02-02.csv  88659_2024-02-06.csv  88659_2024-02-09.csv  88659_2024-02-10.csv  (+93 more)
projects/hoymiles/temp/: 01.py  app.ipynb  app.py  main copy.ipynb  main.ipynb  main_2.py  main_3.py  temp_06.py  temp_2.py
projects/pdf-extractor/: main.ipynb
temp/: _.ipynb  _parquet.ipynb
(+1128 files in other folders)
