[tool.poetry]
name = "python-studies"
version = "0.1.0"
description = ""
authors = ["Wilkne Maia <72803395+wilkneMaia@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
fastparquet = "^2024.11.0"
openpyxl = "^3.1.5"
streamlit = "^1.42.2"
plotly = "^6.0.0"
watchdog = "^6.0.0"
yfinance = "^0.2.54"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
